--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <section class="container mx-auto p-4">
             <h1 class="text-2xl font-medium">My Profile</h1>
-            <img src="path/to/profile-picture.jpg" class="w-32 h-32 rounded-full mx-auto mb-4">
+            <img src="images/foto_mhs.jpg" class="w-32 h-32 rounded-full mx-auto mb-4">
             <p class="text-gray-700">Nama : John Doe</p>
             <p class="text-gray-700">Email : johndoe@example.com</p>
             <p class="text-gray-700">Telepon : +1234567890</p>
